# sc-max3010x

./: .gitignore  CMakeLists.txt  README.md
apps/MAX30105_debug/: CMakeLists.txt  main.cpp
libs/MAX30105/: CMakeLists.txt  MAX30105.cpp  MAX30105.h  heartRate.h  spo2_algorithm.cpp  spo2_algorithm.h
libs/piDuino/: CMakeLists.txt  Core.h  Wire.cpp  Wire.h  WireGlobal.h
libs/piDuino/m4/: libtool.m4
plugin/: CMakeLists.txt  Max30102.sc  Max30102_UGen.cpp
